# rappi-test

./: .gitignore  EDA.ipynb  README.md  pyproject.toml
configs/: logistic_regression_config.yml
source/: cli.py  inference.py  train.py
source/config/: config.py
source/datasets/: __init__.py  titanic.py
source/model/: __init__.py  evaluation.py  stats_model.py
tests/: inference_test.py  train_test.py
tests/datasets/: titanic_dataset_test.py
tests/model/: evaluation_test.py  stats_model_test.py
