[tool.poetry]
name = "source"
version = "0.1.0"
description = ""
authors = ["GermanGrandas <german.grandas@utp.edu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.3"
statsmodels = "^0.14.1"
click = "^8.1.7"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
rappi-ml = "source.cli:cli"